calendar icon style fix arrow on horizontal scroll

--- a/src/assets/styles/components/_component.button.scss
+++ b/src/assets/styles/components/_component.button.scss
@@ -58,4 +58,5 @@
 
 .arrow{
   color: white;
+  @include fontSize("a1")
 }
