--- a/src/assets/styles/elements/_elements.headings.scss
+++ b/src/assets/styles/elements/_elements.headings.scss
@@ -8,7 +8,7 @@ h6 {
 }
 
 h1 {
-  @include fontSize("a1");
+  @include fontSize("a3");
 }
 
 h2 {
