--- a/src/assets/styles/settings/_settings.colors.scss
+++ b/src/assets/styles/settings/_settings.colors.scss
@@ -2,7 +2,7 @@ $primary-grey: #999c9f;
 $dark-grey: #060d17;
 $secondary-grey: #0a151f;
 $primary-white: #ffffff;
-$primary-red: #bb1e1e;
+$primary-red: #eb3b5a;
 $primary-black: #000000;
 $primary-blue: #1e71bb;
 $primary_yellow: #fbc500;
