--- a/src/assets/styles/settings/_settings.typography.scss
+++ b/src/assets/styles/settings/_settings.typography.scss
@@ -22,8 +22,8 @@ $settings-typography: (
     $breakpoint-xl: 64px,
   ),
   "a3": (
-    $breakpoint-sm: 28px,
-    $breakpoint-xl: 48px,
+    $breakpoint-sm: 20px,
+    $breakpoint-xl: 40px,
   ),
   "a2": (
     $breakpoint-sm: 25px,
